--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
-    <section id="about">
-      <div id="about-block">What is Crafting for Cancer</div>
-      <div id="about-paragraph">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sequi
-          porro beatae incidunt autem, voluptate, delectus enim at veritatis
-          dolorem nihil obcaecati quae, blanditiis culpa. Explicabo a similique
-          molestiae rerum.
-        </p>
-      </div>
-    </section>
-    <section id="photos">
-      <img id="beanie-pic" src="/imgs/beaniepic.jpeg" alt="beanies made" />
-      <img id="board-pic" src="/imgs/boardpic.jpeg" alt="board members" />
-    </section>
+    <div class="body-container">
+      <section id="about">
+        <div id="about-block"><p>What is Crafting for Cancer</p></div>
+        <div id="about-paragraph">
+          <p>
+            We are an orgnization that reaches out to cancer patients while
+            acquiring and maintaining the unique skill of crocheting. Members
+            learn how to crochet beanies which are donated to Jessie Rees
+            Foundation’s Brave Beanie program. This foundation give these
+            beanies are put into Jessie’s Joy Jars which are given to kids
+            fighting cancer.
+          </p>
+        </div>
+      </section>
+      <section id="photos">
+        <img id="beanie-pic" src="/imgs/beaniepic.jpeg" alt="beanies made" />
+        <img id="board-pic" src="/imgs/boardpic.jpeg" alt="board members" />
+      </section>
+      <footer id="footer"></footer>
+    </div>
   </body>
 </html>
