--- a/index.html
+++ b/index.html
@@ -37,8 +37,20 @@
         </div>
       </section>
       <section id="photos">
-        <img id="beanie-pic" src="/imgs/beaniepic.jpeg" alt="beanies made" />
-        <img id="board-pic" src="/imgs/boardpic.jpeg" alt="board members" />
+        <div class="beanie-container">
+          <img id="beanie-pic" src="/imgs/beaniepic.jpeg" alt="beanies made" />
+          <p id="beanie-caption">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa,
+            voluptate!
+          </p>
+        </div>
+        <div class="board-container">
+          <img id="board-pic" src="/imgs/boardpic.jpeg" alt="board members" />
+          <div id="board-caption">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam,
+            deleniti!
+          </div>
+        </div>
       </section>
       <footer id="footer"></footer>
     </div>
