--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <img id="logo" src="imgs/logo-removebg-preview.png" alt="logo" />
+      <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
       <a href="#" class="toggle">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -38,14 +38,14 @@
       </section>
       <section id="photos">
         <div class="beanie-container">
-          <img id="beanie-pic" src="imgs/beaniepic.jpeg" alt="beanies made" />
+          <img id="beanie-pic" src="./imgs/beaniepic.jpeg" alt="beanies made" />
           <p id="beanie-caption">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa,
             voluptate!
           </p>
         </div>
         <div class="board-container">
-          <img id="board-pic" src="imgs/boardpic.jpeg" alt="board members" />
+          <img id="board-pic" src="./imgs/boardpic.jpeg" alt="board members" />
           <div id="board-caption">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam,
             deleniti!
