--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </div>
         <div class="board-container">
           <img id="board-pic" src="./imgs/boardpic.jpeg" alt="board members" />
-          <div id="board-caption">
+          <p id="board-caption">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam,
             deleniti!
-          </div>
+          </p>
         </div>
       </section>
       <footer id="footer"></footer>
