--- a/index.html
+++ b/index.html
@@ -40,16 +40,12 @@
         <div class="beanie-container">
           <img id="beanie-pic" src="./imgs/beaniepic.jpeg" alt="beanies made" />
           <p id="beanie-caption">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa,
-            voluptate!
+            A collection of beanies we donated to the Jessie Rees Foundation!
           </p>
         </div>
         <div class="board-container">
           <img id="board-pic" src="./imgs/boardpic.jpeg" alt="board members" />
-          <p id="board-caption">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam,
-            deleniti!
-          </p>
+          <p id="board-caption">Meet our current 2022-2023 Board!</p>
         </div>
       </section>
       <footer id="footer"></footer>
