--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
         <div class="beanie-container">
           <img id="beanie-pic" src="./imgs/beaniepic.jpeg" alt="beanies made" />
           <p id="beanie-caption">
-            A collection of beanies we donated to the Jessie Rees Foundation!
+            The one-hundred beanies we donated to the Jessie Rees Foundation
+            last year!
           </p>
         </div>
         <div class="board-container">
           <img id="board-pic" src="./imgs/boardpic.jpeg" alt="board members" />
-          <p id="board-caption">Meet our current 2022-2023 Board!</p>
+          <p id="board-caption">2021-2022 Club Members!</p>
         </div>
       </section>
       <footer id="footer"></footer>
