--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="nav-holder">
         <li><a href="#">Homepage</a></li>
         <li><a href="#">Join Us</a></li>
-        <li><a href="#">Beanie Tutorial</a></li>
+        <li><a href="#">Beanie Tutorials</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
@@ -27,7 +27,7 @@
         <div id="about-block"><p>What is Crafting for Cancer</p></div>
         <div id="about-paragraph">
           <p>
-            We are an orgnization that reaches out to cancer patients while
+            We are an organization that reaches out to cancer patients while
             acquiring and maintaining the unique skill of crocheting. Members
             learn how to crochet beanies which are donated to Jessie Rees
             Foundation’s Brave Beanie program. This foundation give these
