--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </section>
       <section id="photos">
         <div class="beanie-container">
-          <img id="beanie-pic" src="./imgs/beaniepic.jpeg" alt="beanies made" />
+          <img id="beanie-pic" src="./imgs/newbeanie.jpeg" alt="beanies made" />
           <p id="beanie-caption">
             The one-hundred beanies we donated to the Jessie Rees Foundation
             last year!
           </p>
         </div>
         <div class="board-container">
-          <img id="board-pic" src="./imgs/boardpic.jpeg" alt="board members" />
+          <img id="board-pic" src="./imgs/newboard.jpeg" alt="board members" />
           <p id="board-caption">2021-2022 Club Members!</p>
         </div>
       </section>
