--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="body-container">
       <section id="about">
-        <div id="about-block"><p>What is Crafting for Cancer</p></div>
+        <div id="about-block"><h1>What is Crafting for Cancer</h1></div>
         <div id="about-paragraph">
           <p>
             We are an organization that reaches out to cancer patients while
