Initial Pages for BeanieTutorial and ContactUs

--- a/index.html
+++ b/index.html
@@ -10,16 +10,11 @@
   <body>
     <nav>
       <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
-      <a href="#" class="toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </a>
       <ul class="nav-holder">
-        <li><a href="#">Homepage</a></li>
+        <li><a href="index.html">Homepage</a></li>
         <li><a href="#">Join Us</a></li>
-        <li><a href="#">Beanie Tutorials</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
     <div class="body-container">
