updated join and beanie page

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -12,10 +12,18 @@
       <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
-        <li><a href="#">Join Us</a></li>
+        <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
+
+    <div class="body-container">
+      <h1>Beanie Tutorials</h1>
+      <a
+        href="https://youtube.com/playlist?list=PLyUW7HzKUEk5KqsUlwNWX6K5by0JLswCo"
+        >link</a
+      >
+    </div>
   </body>
 </html>
