--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
-        <li><a href="#">Join Us</a></li>
+        <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
     <div class="body-container">
@@ -44,7 +44,9 @@
           <p id="board-caption">2021-2022 Club Members!</p>
         </div>
       </section>
-      <footer id="footer"></footer>
+      <!-- <footer id="footer"></footer> -->
     </div>
+  </div>
+  <footer>Made with ❤️ by Maxwell Gonick</footer>
   </body>
 </html>
