--- a/joinus.html
+++ b/joinus.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crafting for Cancer</title>
-    <link rel="stylesheet" href="contact-styles.css" />
+    <link rel="stylesheet" href="joinus-styles.css" />
   </head>
   <body>
     <nav>
@@ -18,13 +18,25 @@
       </ul>
     </nav>
     <div class="body-container">
-      <div class="email-block">Email Us at cfc.ucla@gmail.com</div>
+      <p class="application-blurb">
+        <span id="emphasis">No application needed!</span><br />Just come to our
+        meetings! We meet every Wednesday at 6pm in Ackerman 3517!
+      </p>
       <p class="contact-us">
-        Send us a message at on GroupMe at
-        <a href="https://groupme.com/join_group/89272597/s4aJ0det "
-          >https://groupme.com/join_group/89272597/s4aJ0det
-        </a>
+        Join our GroupMe!<br />
+        <button
+          id="groupme"
+          onclick="window.location.href=`https://groupme.com/join_group/89272597/s4aJ0det`;"
+        >
+          Link
+        </button>
+      </p>
+
+      <p class="interest-form">
+        Fill out our interest form! <br />
+        <button id="form">Link</button>
       </p>
     </div>
+    <footer>Made with ❤️ by Maxwell Gonick</footer>
   </body>
 </html>
