--- a/joinus.html
+++ b/joinus.html
@@ -37,6 +37,6 @@
         <button id="form">Link</button>
       </p>
     </div>
-    <footer>Made with ❤️ by Maxwell Gonick</footer>
+    <!-- <footer>Made with ❤️ by Maxwell Gonick</footer> -->
   </body>
 </html>
