beanie tutorial groundwork html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       </section>
     </div>
   </div>
-  <footer>Made with ❤️ by Maxwell Gonick</footer>
+  <footer>Made with ❤️ by&nbsp;<a href="https://github.com/maxgonick" id="github">Maxwell Gonick</a></footer>
   </body>
 </html>
