updated spacing in joinus

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <nav>
-      <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
+      <a href="index.html"
+        ><img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo"
+      /></a>
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
@@ -50,7 +52,7 @@
             After you have a nice circle, you just 1/2 Double crochet once in
             every stitch all the way until long enough to be beanie (try it on!)
           </li>
-          <li>1-2rows of single stitch</li>
+          <li>1-2 rows of single stitch</li>
         </ol>
       </div>
     </div>
