--- a/joinus.html
+++ b/joinus.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <nav>
-      <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
+      <a href="index.html"
+        ><img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo"
+      /></a>
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="#">Join Us</a></li>
