--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" />
+      <a href="index.html"><img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" /></a>
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
