beanie link styling

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -24,33 +24,34 @@
       <h2>Beanie Tutorials</h2>
       <a
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk5KqsUlwNWX6K5by0JLswCo"
-        >Crochet Basics</a
+        >Crochet Basics Link</a
       >
-      <a href="#">Simple beanie patterns</a>
+      <a href="#">Simple Beanie Patterns Link</a>
       <div class="pattern">
         <h2>Written out pattern</h2>
         <ol>
           <li>Slip Knot</li>
           <li>Chain 4</li>
           <li>Slip stitch into the first stitch</li>
-          <li>Create ten 1/2 Double crochets into the ring</li>
+          <li>Create ten &frac12; Double crochets into the ring</li>
           <li>
-            Pattern: two half double crochets into each stitch (2,2,2...2)
+            Pattern: two half double crochets into each stitch (2, 2, 2, ... 2)
           </li>
           <li>
-            One 1/2 Double, two 1/2 Double alternating between each stitch
-            (1,2,1,2,1...2)
+            One &frac12; Double, two &frac12; Double alternating between each
+            stitch (1, 2, 1, 2, 1, ... 2)
           </li>
-          <li>1,1,2,1,1,2,1,1...2</li>
-          <li>1,1,1,2,1,1,1,2,1,1,1...2</li>
-          <li>1,1,1,1,2,1,1,1,1,2,1,1,1,1...2</li>
+          <li>1, 1, 2, 1, 1, 2, 1, 1, ... 2</li>
+          <li>1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, ... 2</li>
+          <li>1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, ... 2</li>
           <li>
-            1,1,1,1,1,2,1,1,1,1,1,2,1,1,1,1,1...2 (should always end on two 1/2
-            Double crochets after the last stitch
+            1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, ... 2 (should
+            always end on two &frac12; Double crochets after the last stitch)
           </li>
           <li>
-            After you have a nice circle, you just 1/2 Double crochet once in
-            every stitch all the way until long enough to be beanie (try it on!)
+            After you have a nice circle, you just &frac12; Double crochet once
+            in every stitch all the way until long enough to be beanie (try it
+            on!)
           </li>
           <li>1-2 rows of single stitch</li>
         </ol>
