added contact page

--- a/contactus.html
+++ b/contactus.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crafting for Cancer</title>
-    <link rel="stylesheet" href="joinus-styles.css" />
+    <link rel="stylesheet" href="contactus-styles.css" />
   </head>
   <body>
     <nav>
@@ -20,25 +20,16 @@
       </ul>
     </nav>
     <div class="body-container">
-      <p class="application-blurb">
-        <span id="emphasis">No application needed!</span><br />Just come to our
-        meetings! We meet every Wednesday at 6pm in Ackerman 3517!
+      <p id="email">
+        Email us at <br />
+        cfc.ucla@gmail.com
       </p>
-      <p class="contact-us">
-        Join our GroupMe!<br />
-        <button
-          id="groupme"
-          onclick="window.location.href=`https://groupme.com/join_group/89272597/s4aJ0det`;"
-        >
-          Link
-        </button>
-      </p>
-
-      <p class="interest-form">
-        Fill out our interest form! <br />
-        <button id="form">Link</button>
-      </p>
+      <div id="groupme">Send us a message on <a href="">GroupMe</a></div>
     </div>
-    <!-- <footer>Made with ❤️ by Maxwell Gonick</footer> -->
+    <footer>
+      Made with ❤️ by&nbsp;<a href="https://github.com/maxgonick" id="github"
+        >Maxwell Gonick</a
+      >
+    </footer>
   </body>
 </html>
