--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="contactus.html">Contact Us</a></li>
       </ul>
     </nav>
     <div class="body-container">
@@ -46,6 +46,5 @@
       </section>
     </div>
   </div>
-  <footer>Made with ❤️ by&nbsp;<a href="https://github.com/maxgonick" id="github">Maxwell Gonick</a></footer>
   </body>
 </html>
