--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -16,7 +16,7 @@
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="contactus.html">Contact Us</a></li>
       </ul>
     </nav>
 
