tentative draft, updated contact-us page and various spacing

--- a/contactus.html
+++ b/contactus.html
@@ -20,9 +20,10 @@
       </ul>
     </nav>
     <div class="body-container">
+      <h1>Have any questions?</h1>
       <p id="email">
         Email us at <br />
-        cfc.ucla@gmail.com
+        <a href="mailto:cfc.ucla@gmail.com">cfc.ucla@gmail.com</a>
       </p>
       <div id="groupme">Send us a message on <a href="">GroupMe</a></div>
     </div>
