typo index.html

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -26,7 +26,10 @@
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk5KqsUlwNWX6K5by0JLswCo"
         >Crochet Basics Link</a
       >
-      <a href="#">Simple Beanie Patterns Link</a>
+      <a
+        href="https://youtube.com/playlist?list=PLyUW7HzKUEk6f0xm33XyAz1dIleukGtpC"
+        >Simple Beanie Patterns Link</a
+      >
       <div class="pattern">
         <h2>Written out pattern</h2>
         <ol>
