--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             We are an organization that reaches out to cancer patients while
             acquiring and maintaining the unique skill of crocheting. Members
             learn how to crochet beanies which are donated to Jessie Rees
-            Foundation’s Brave Beanie program. This foundation give these
-            beanies are put into Jessie’s Joy Jars which are given to kids
+            Foundation’s Brave Beanie program. This foundation puts these beanies into Jessie’s Joy Jars which are given to kids
             fighting cancer.
           </p>
         </div>
