added interest form

--- a/joinus.html
+++ b/joinus.html
@@ -36,7 +36,12 @@
 
       <p class="interest-form">
         Fill out our interest form! <br />
-        <button id="form">Link</button>
+        <button
+          id="form"
+          onclick="window.location.href=`https://forms.gle/ZjLRWXkXo5o8Lub29`;"
+        >
+          Link
+        </button>
       </p>
     </div>
   </body>
