--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="homepage-styles.css" />
     <title>Crafting for Cancer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <nav>
-      <a href="index.html"><img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" /></a>
+      <a href="index.html "><img id="logo" src="./imgs/logo-removebg-preview.png" alt="logo" /></a>
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
