--- a/contactus.html
+++ b/contactus.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crafting for Cancer</title>
     <link rel="stylesheet" href="contactus-styles.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imgs/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imgs/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imgs/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <nav>
@@ -21,10 +39,12 @@
     </nav>
     <div class="body-container">
       <h1>Have any questions?</h1>
-      <p id="email">
+      <hr />
+      <div id="email">
         Email us at <br />
         <a href="mailto:cfc.ucla@gmail.com">cfc.ucla@gmail.com</a>
-      </p>
+      </div>
+      <hr />
       <div id="groupme">Send us a message on <a href="">GroupMe</a></div>
     </div>
     <footer>
