--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <script type="text/javascript" src="script.js" defer></script>
   </head>
   <body>
     <nav>
@@ -20,6 +21,11 @@
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
+      <button class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
     </nav>
     <div class="body-container">
       <section id="about">
