--- a/joinus.html
+++ b/joinus.html
@@ -24,6 +24,7 @@
       href="imgs/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
+    <script type="text/javascript" src="script.js" defer></script>
   </head>
   <body>
     <nav>
@@ -36,6 +37,11 @@
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
+      <button class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
     </nav>
     <div class="body-container">
       <p class="application-blurb">
