--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -25,6 +25,20 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
     <script type="text/javascript" src="script.js" defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YW2RKH367C"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-YW2RKH367C");
+    </script>
   </head>
   <body>
     <nav>
