join us resizing

--- a/forms.html
+++ b/forms.html
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-YW2RKH367C"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-YW2RKH367C");
-    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crafting for Cancer</title>
-    <link rel="stylesheet" href="joinus-styles.css" />
+    <link rel="stylesheet" href="forms-styles.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -57,32 +43,5 @@
         <span class="bar"></span>
       </button>
     </nav>
-    <div class="body-container">
-      <p class="application-blurb">
-        <span id="emphasis">No application needed!</span><br />Just come to our
-        meetings! We meet every Wednesday at 6pm in Ackerman 3517!
-      </p>
-      <hr>
-      <p class="contact-us">
-        Join our GroupMe!<br />
-        <button
-          id="groupme"
-          onclick="window.location.href=`https://groupme.com/join_group/89272597/s4aJ0det`;"
-        >
-          Link
-        </button>
-        <hr>
-      </p>
-
-      <p class="interest-form">
-        Fill out our interest form! <br />
-        <button
-          id="form"
-          onclick="window.location.href=`https://forms.gle/ZjLRWXkXo5o8Lub29`;"
-        >
-          Link
-        </button>
-      </p>
-    </div>
   </body>
 </html>
