--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -50,6 +50,7 @@
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
+        <li><a href="forms.html">Forms</a></li>
       </ul>
       <button class="hamburger">
         <span class="bar"></span>
@@ -68,6 +69,8 @@
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk6f0xm33XyAz1dIleukGtpC"
         >Simple Beanie Patterns Link</a
       >
+
+      <hr />
       <div class="pattern">
         <h2>Written out Pattern</h2>
         <ol>
