--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
+        <li><a href="forms.html">Forms</a></li>
       </ul>
       <button class="hamburger">
         <span class="bar"></span>
