Added forms page and styling, and new text to joinus.html

--- a/forms.html
+++ b/forms.html
@@ -35,8 +35,8 @@
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
-        <li><a href="contactus.html">Contact Us</a></li>
         <li><a href="forms.html">Forms</a></li>
+        <li><a href="contactus.html">Contact Us</a></li>
       </ul>
       <button class="hamburger">
         <span class="bar"></span>
@@ -44,5 +44,28 @@
         <span class="bar"></span>
       </button>
     </nav>
+    <div class="body-container">
+      <p class="signin">
+        Sign in Form<br />
+        <button
+          id="sign"
+          onclick="window.location.href=`https://forms.gle/idBLYxygaE48SuCaA
+          https://forms.gle/idBLYxygaE48SuCaA`;"
+        >
+          Link
+        </button>
+      </p>
+      <hr />
+      <p class="checkout">
+        Supply Checkout Form<br />
+        <button
+          id="out"
+          onclick="window.location.href=`https://forms.gle/ckUEaZy92EW1wc23A
+          https://forms.gle/ckUEaZy92EW1wc23A`;"
+        >
+          Link
+        </button>
+      </p>
+    </div>
   </body>
 </html>
