--- a/joinus.html
+++ b/joinus.html
@@ -49,8 +49,8 @@
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
-        <li><a href="contactus.html">Contact Us</a></li>
         <li><a href="forms.html">Forms</a></li>
+        <li><a href="contactus.html">Contact Us</a></li>
       </ul>
       <button class="hamburger">
         <span class="bar"></span>
@@ -61,7 +61,8 @@
     <div class="body-container">
       <p class="application-blurb">
         <span id="emphasis">No application needed!</span><br />Just come to our
-        meetings! We meet every Wednesday at 6pm in Ackerman 3517!
+        meetings! We meet every Wednesday at 6pm in Ackerman 3517! <br />
+        <span class="venmo">Venmo $15 club dues to @ucla-cfc</span>
       </p>
       <hr>
       <p class="contact-us">
@@ -83,6 +84,7 @@
         >
           Link
         </button>
+        
       </p>
     </div>
   </body>
