Fixed spacing issue with forms.html and fixed link issue

--- a/forms.html
+++ b/forms.html
@@ -49,8 +49,7 @@
         Sign in Form<br />
         <button
           id="sign"
-          onclick="window.location.href=`https://forms.gle/idBLYxygaE48SuCaA
-          https://forms.gle/idBLYxygaE48SuCaA`;"
+          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSeYfg8qX6aLbwXa0q4o6yFn6wGiro-Hdc5K73SS2WbKRmSKGw/viewform`;"
         >
           Link
         </button>
@@ -60,8 +59,7 @@
         Supply Checkout Form<br />
         <button
           id="out"
-          onclick="window.location.href=`https://forms.gle/ckUEaZy92EW1wc23A
-          https://forms.gle/ckUEaZy92EW1wc23A`;"
+          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSf_PB7qzE7W0h2aluxPSAva9Gmkf8kfUB1JzRgbZ1AcsQZuqw/viewform`;"
         >
           Link
         </button>
