changed beanie pattern text

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -72,7 +72,7 @@
 
       <hr />
       <div class="pattern">
-        <h2>Written out Pattern</h2>
+        <h2>Baby-sized Beanie Pattern</h2>
         <ol>
           <li>Slip Knot</li>
           <li>Chain 4</li>
@@ -87,17 +87,21 @@
           </li>
           <li>1, 1, 2, 1, 1, 2, 1, 1, ... 2</li>
           <li>1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, ... 2</li>
-          <li>1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, ... 2</li>
           <li>
-            1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, ... 2 (should
-            always end on two &frac12; Double crochets after the last stitch)
+            1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, ... 2 (should always end
+            on two &frac12; Double crochets after the last stitch)
           </li>
           <li>
             After you have a nice circle, you just &frac12; Double crochet once
             in every stitch all the way until long enough to be beanie (try it
-            on!)
+            on!).
           </li>
-          <li>1-2 rows of single stitch</li>
+          <li>
+            The 7” beanie with a folded edge this should be about 19 rows of
+            &frac12; double crochets, for a total of 25 rows.
+          </li>
+          <li>Slip stitch into the next stitch</li>
+          <li>Tie off and weave in your ends</li>
         </ol>
       </div>
     </div>
