Update Beanie Pattern for Teen-sized Beanie

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -60,6 +60,10 @@
     </nav>
 
     <div class="body-container">
+      <h2 class="title">
+        This quarter we are looking for teen-sized beanies! <br />
+        Circumference 20 &frac12;" -22" height 9-10"
+      </h2>
       <h2>Beanie Tutorials</h2>
       <a
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk5KqsUlwNWX6K5by0JLswCo"
@@ -72,7 +76,7 @@
 
       <hr />
       <div class="pattern">
-        <h2>Baby-sized Beanie Pattern</h2>
+        <h2>Teen-sized Beanie Pattern</h2>
         <ol>
           <li>Slip Knot</li>
           <li>Chain 4</li>
