fixing scroll on the navHolder

--- a/joinus.html
+++ b/joinus.html
@@ -61,25 +61,25 @@
     <div class="body-container">
       <p class="application-blurb">
         <span id="emphasis">No application needed!</span><br />Just come to our
-        meetings! We meet every Wednesday at 6pm in Ackerman Union room 3517! <br />
+        meetings! We meet every Wednesday at 6pm in Kaplan Hall A26! <br />
       <!-- <span class="venmo">Venmo $15 club dues to @ucla-cfc</span> -->
       </p>
       <hr>
       <p class="contact-us">
-        Join our GroupMe!<br />
+        Join our Discord!<br />
         <button
           id="groupme"
-          onclick="window.location.href=`https://groupme.com/join_group/96812117/kSt1vrxG`;"
+          onclick="window.location.href=`https://discord.gg/fY9ZnRVKF7`;"
         >
           Link
         </button>
         <hr>
       </p>
       <p class="interest-form">
-        Fill out our interest form! <br />
+        Follow Our Instagram! <br />
         <button
           id="form"
-          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSeR5G7ixXicoqWlxPXtQ8p0bYLCDzmxvcbXKTJJOU1tfTfv3A/viewform?usp=sf_link`;"
+          onclick="window.location.href=`https://www.instagram.com/ucla_cfc/`;"
         >
           Link
         </button>
