--- a/contactus.html
+++ b/contactus.html
@@ -66,7 +66,7 @@
         <a href="mailto:cfc.ucla@gmail.com">cfc.ucla@gmail.com</a>
       </div>
       <hr />
-      <div id="groupme">Send us a message on <a href="https://groupme.com/join_group/96812117/kSt1vrxG">GroupMe</a></div>
+      <div id="groupme">Send us a message on <a href="https://discord.gg/fY9ZnRVKF7">Discord</a></div>
     </div>
   </body>
 </html>
